13/01/13 Added support for ircu's channel mode +R (was missing)


Changes
13/10/22 Removed configure searches to embed perl in the code
13/10/17 Removed USE_RDB define from config, this was legacy Anope code for when rdb was an option.
13/05/31 Improved handling of KILL messages on InspIRCd
13/05/16 Do not free unallocated memory in InspIRCd protocol

Fixes
13/10/23 Total revamp of how we look for MySQL libs and headers, this in theory should fix the problem
         people have had on various systems getting MySQL to be detected
13/10/18 Fixed memory leak in protocol modules in function *_lkill_killer() sadly this needs to be fixed
         since the core has a strtok() function that will save tons of time.
13/10/17 Fixed StatServ HELP in special case, Stats Admin help would never be shown.
13/10/17 StatServ ADMIN ADD now updates User struct to show they are an admin (we did it in DEL)
13/10/17 StatServ ADMIN SETPASS now updates SQL with the password
13/10/16 cron_chanstats.c does not load if sql is disabled, all cron_* and xmlrpc_* mods now 
         use MOD_STOP if there is error binding the commands.
13/10/16 HTML modules no longer load if html is disabled, and return MOD_STOP if there is an error
         binding to the command, should save some memory.
13/10/15 Fixed compiling most of the source under win32/win64 (sql to come soon)
13/10/14 Fixed a ton of compiler warnings and errors, can build on Mac OS X
13/10/11 Fixed an error in the ./Config script
13/10/06 Fixed the 'kill of nonexistent nick' error in inspircd12
13/06/05 Fixed the 'command out of sync' error caused by mysql_optimize and mysql_backup
13/06/02 Fixed a memleak in cron_chanstats.c
13/05/06 Fixed merging users with itself.


Removals


Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Conti <sojugarden@gmail.com>
[2] Trystan <scott@burkee.org>

Much more see Changes.1.5.pre2013


Denora v1.4.5
-------------

Additions