@@ -85,7 +85,7 @@ CREATE TABLE IF NOT EXISTS `ustats` (
   `uname` varchar(32) NOT NULL default '', 
   `chan` varchar(32) NOT NULL default '',
   `type` tinyint(1) unsigned NOT NULL default '0',
-  `letters` int(10) unsigned default '0',
+  `letters` bigint(20) unsigned default '0',
   `words` int(10) unsigned default '0',
   `line` int(10) unsigned default '0',
   `actions` int(10) unsigned default '0',
@@ -131,7 +131,7 @@ CREATE TABLE IF NOT EXISTS `cstats` (
   `chan` varchar(255) NOT NULL default '',
   `type` tinyint(1) unsigned NOT NULL default '0',
   `timeadded` int(10) unsigned default '0',
-  `letters` int(10) unsigned default '0',
+  `letters` bigint(20) unsigned default '0',
   `words` int(10) unsigned default '0',
   `line` int(10) unsigned default '0',
   `actions` int(10) unsigned default '0',
